# Trading-Bot

./: CMakeLists.txt  CMakePresets.json  README.txt
include/: Backtest_lib.h  Bar.h  Custom_EWrapper.h  DateTime.h  Equity.h  EquitySnapshot.h  HistoricalEquityData.h  HistoricalMarketData.h  LiveEquity.h  Portfolio.h
include/actor/: Actor.h  HistoricalActor.h
include/core/: DateTime.h  EquitySnapshot.h
include/market/: HistoricalEquity.h  HistoricalMarket.h  LiveEquity.h  LiveMarket.h
include/risk/: RiskManager.h
include/strategy/: Strategy.h
include/trading/: LimitOrder.h  OpenPosition.h  Portfolio.h
src/: Backtest_lib.cpp  Bar.cpp  CMakeLists.txt  DateTime.cpp  Equity.cpp  EquitySnapshot.cpp  HistoricalEquityData.cpp  HistoricalMarketData.cpp  LiveEquity.cpp  Portfolio.cpp  Test1.cpp
src/actor/: Actor.cpp  CMakeLists.txt
src/core/: CMakeLists.txt  DateTime.cpp  EquitySnapshot.cpp
src/market/: CMakeLists.txt  HistoricalEquity.cpp  HistoricalMarket.cpp  LiveEquity.cpp  LiveMarket.cpp
src/risk/: CMakeLists.txt  RiskManager.cpp
src/strategy/: CMakeLists.txt  Strategy.cpp
src/trading/: CMakeLists.txt  LimitOrder.cpp  OpenPosition.cpp  Portfolio.cpp
test/: test.cpp
